# dskread

./: .gitignore  CMakeLists.txt  Makefile  README.md  common.h  getopt.h  getopt_long.c  sg_dd.c  util.c
sg3_utils-1.45/: Makefile
